--- a/index.html
+++ b/index.html
@@ -17,12 +17,18 @@
       <a href="" class="tab-nav-item is-active" data-nav="0">Tab-0</a>
       <a href="" class="tab-nav-item" data-nav="1">Tab-1</a>
       <a href="" class="tab-nav-item" data-nav="2">Tab-2</a>
+      <a href="" class="tab-nav-item" data-nav="3">Tab-3</a>
+      <a href="" class="tab-nav-item" data-nav="4">Tab-4</a>
+      <a href="" class="tab-nav-item" data-nav="5">Tab-5</a>
     </div>
     <div class="tab-contents">
       <!--タブの内容-->
       <div class="tab-contents-item" data-cont="0">タブその0</div>
       <div class="tab-contents-item" data-cont="1">タブその1</div>
       <div class="tab-contents-item" data-cont="2">タブその2</div>
+      <div class="tab-contents-item" data-cont="3">タブその3</div>
+      <div class="tab-contents-item" data-cont="4">タブその4</div>
+      <div class="tab-contents-item" data-cont="5">タブその5</div>
     </div>
   </div>
   
